tests/specs/TsTypePredicate1.txt
# mod.ts
export function foo(bar: A | B): bar is A {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function foo(bar: A | B): bar is A {}
  | ^


# output.txt
Defined in file:///mod.ts:1:1

function foo(bar: A | B): bar is A


# output.json
[
  {
    "kind": "function",
    "name": "foo",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "params": [
        {
          "kind": "identifier",
          "name": "bar",
          "optional": false,
          "tsType": {
            "repr": "",
            "kind": "union",
            "union": [
              {
                "repr": "A",
                "kind": "typeRef",
                "typeRef": {
                  "typeParams": null,
                  "typeName": "A"
                }
              },
              {
                "repr": "B",
                "kind": "typeRef",
                "typeRef": {
                  "typeParams": null,
                  "typeName": "B"
                }
              }
            ]
          }
        }
      ],
      "returnType": {
        "repr": "bar is A",
        "kind": "typePredicate",
        "typePredicate": {
          "asserts": false,
          "param": {
            "type": "identifier",
            "name": "bar"
          },
          "type": {
            "repr": "A",
            "kind": "typeRef",
            "typeRef": {
              "typeParams": null,
              "typeName": "A"
            }
          }
        }
      },
      "hasBody": true,
      "isAsync": false,
      "isGenerator": false,
      "typeParams": []
    }
  }
]
